test/solc-verify/specs/EmitsEventsIncorrect.sol.gold
Error while running compiler, details:
Warning: This is a pre-release compiler version, please do not use it in production.


======= Converting to Boogie IVL =======
solc-verify error: Function possibly emits 'Increased' without specifying
  --> test/solc-verify/specs/EmitsEventsIncorrect.sol:10:5:
   |
10 |     function increase() public {
   |     ^ (Relevant source part starts here and spans across multiple lines).

solc-verify warning: Function specifies 'Decreased' but never emits.
  --> test/solc-verify/specs/EmitsEventsIncorrect.sol:10:5:
   |
10 |     function increase() public {
   |     ^ (Relevant source part starts here and spans across multiple lines).

solc-verify error: Function possibly emits 'Increased' (via modifier increases_x) without specifying
  --> test/solc-verify/specs/EmitsEventsIncorrect.sol:20:5:
   |
20 |     function increase_with_modifier() public increases_x {
   |     ^ (Relevant source part starts here and spans across multiple lines).


